# docs/swagger.yaml
@@ -35,40 +35,18 @@ definitions:
     - otr
     - tenor_months
     type: object
-  model.Customer:
+  model.CreateTransactionRequest:
     properties:
-      created_at:
-        type: string
-      date_birth:
-        type: string
-      email:
-        type: string
-      full_name:
-        type: string
-      id:
-        type: integer
-      identity_file:
-        type: string
-      legal_name:
-        type: string
-      loans:
-        items:
-          $ref: '#/definitions/model.Loan'
-        type: array
-      nik:
-        type: string
-      place_birth:
-        type: string
-      salary:
+      amount:
+        example: 1000
+        minimum: 0
         type: number
-      selfie_file:
-        type: string
-      tenors:
-        items:
-          $ref: '#/definitions/model.Tenor'
-        type: array
-      updated_at:
-        type: string
+      loan_id:
+        example: 1
+        type: integer
+    required:
+    - amount
+    - loan_id
     type: object
   model.CustomerResponse:
     properties:
@@ -91,35 +69,6 @@ definitions:
       salary:
         type: number
       selfie_file:
-        type: string
-    type: object
-  model.Loan:
-    properties:
-      admin_fee:
-        type: number
-      assets_name:
-        type: string
-      created_at:
-        type: string
-      customer:
-        $ref: '#/definitions/model.Customer'
-      customer_id:
-        type: integer
-      id:
-        type: integer
-      installment_amount:
-        type: number
-      otr:
-        type: number
-      tenor_months:
-        type: integer
-      total_paid:
-        type: integer
-      transactions:
-        items:
-          $ref: '#/definitions/model.Transaction'
-        type: array
-      updated_at:
         type: string
     type: object
   model.LoanResponse:
@@ -155,23 +104,6 @@ definitions:
     - email
     - password
     type: object
-  model.Tenor:
-    properties:
-      amount:
-        type: number
-      created_at:
-        type: string
-      customer:
-        $ref: '#/definitions/model.Customer'
-      customer_id:
-        type: integer
-      id:
-        type: integer
-      month:
-        type: integer
-      updated_at:
-        type: string
-    type: object
   model.TenorResponse:
     properties:
       amount:
@@ -181,22 +113,16 @@ definitions:
       month:
         type: integer
     type: object
-  model.Transaction:
+  model.TransactionResponse:
     properties:
       amount:
         type: number
-      created_at:
-        type: string
       id:
         type: integer
       interest_amount:
         type: number
-      loan:
-        $ref: '#/definitions/model.Loan'
       loan_id:
         type: integer
-      updated_at:
-        type: string
     type: object
 info:
   contact: {}
@@ -412,7 +338,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.Transaction'
+                    $ref: '#/definitions/model.TransactionResponse'
                   type: array
               type: object
         "401":
@@ -422,6 +348,41 @@ paths:
       security:
       - AccessToken: []
       summary: Get transaction
+      tags:
+      - transaction
+    post:
+      consumes:
+      - application/json
+      description: Creates a new transaction.
+      parameters:
+      - description: Create Transaction Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateTransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Successful transaction creation response
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "400":
+          description: Bad request error response
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "401":
+          description: Unauthorized error response
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "422":
+          description: Validation error response
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      security:
+      - AccessToken: []
+      summary: Create transaction
       tags:
       - transaction
 securityDefinitions:
