# internal/model/transactionts.go
@@ -18,3 +18,28 @@ type Transaction struct {
 func (Transaction) TableName() string {
 	return "transactions"
 }
+
+type TransactionResponse struct {
+	ID             uint      `json:"id"`
+	LoanID         uint      `json:"loan_id"`
+	Amount         float64   `json:"amount"`
+	InterestAmount float64   `json:"interest_amount"`
+	Date           time.Time `json:"date"`
+}
+
+func (t Transaction) ToResponse() TransactionResponse {
+	return TransactionResponse{
+		ID:             t.ID,
+		LoanID:         t.LoanID,
+		Amount:         t.Amount,
+		InterestAmount: t.InterestAmount,
+		Date:           t.CreatedAt,
+	}
+}
+
+type CreateTransactionRequest struct {
+	LoanID uint    `json:"loan_id" binding:"required" example:"1"`
+	Amount float64 `json:"amount" binding:"required,min=0" example:"1000.00"`
+
+	CustomerID uint `json:"-"`
+}
